--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,8 +3,18 @@
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
 .page.theme_dark {
+  background-image: url(../images/cover-image-dark.png);
+  --header-logo-color: #db00ff;
+  --footer-logo-color: #db00ff;
+  --main-bg-color: #000028;
+  --title-text-color: #000028;
+  --main-text-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --nav-color: #ff0070;
+  --title-shadow: #ff0070;
+  --nav-color-opacity: rgba(255, 0, 112, 0.4);
+  --display: flex;
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
