--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,9 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
+  text-align: start;
+  font-size: 18px;
+  line-height: 23.4px;
 }
 
 h1,
@@ -20,6 +23,17 @@ h5,
 h6,
 p {
   margin: 0;
+}
+
+h2,
+h3,
+h4 {
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 23.4px;
+}
+h4 {
+  font-weight: 400;
 }
 
 ul {
