--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,31 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  background-image: url(../images/cover-image-light.png);
+  --header-logo-color: #ffc2e6;
+  --footer-logo-color: #ffc2e6;
+  --main-bg-color: #fff1f7;
+  --title-text-color: #353430;
+  --title-shadow: #ff0070;
+  --main-text-color: #353430;
+  --accent-color: #ff8dcb;
+  --nav-color: #353430;
+  --nav-color-opacity: rgba(50, 49, 45, 0.4);
+  --display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --title-shadow: #ff0070;
+    --header-logo-color: #ffc2e6;
+    --footer-logo-color: #ffc2e6;
+    --main-bg-color: #fff1f7;
+    --title-text-color: #353430;
+    --main-text-color: #353430;
+    --accent-color: #ff8dcb;
+    --nav-color: #353430;
+    --nav-color-opacity: rgba(50, 49, 45, 0.4);
+    --display: none;
+  }
+  .page {
+    background-image: url(../images/cover-image-light.png);
+  }
 }
