--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,352 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  padding: 20px;
+  font-family: var(--main-font-family);
+  color: var(--main-text-color);
+  background-image: url(../images/cover-image-dark.png);
+  background-size: cover;
+  background-image: center;
+  background-attachment: fixed;
+}
+
+/* HEADER */
+
+.header.decorated-zone {
+  min-block-size: 100vh;
+  position: relative;
+  margin-block-end: 40px;
+  display: flex;
+  flex-direction: column;
+}
+.decorated-zone::after {
+  position: absolute;
+  content: "";
+  width: 25px;
+  height: 25px;
+  border-left: 1px solid var(--nav-color);
+  border-bottom: 1px solid var(--nav-color);
+  z-index: 1;
+  bottom: 40px;
+
+  left: 0;
+}
+.decorated-zone::before {
+  position: absolute;
+  content: "";
+  width: 25px;
+  height: 25px;
+  border-right: 1px solid var(--nav-color);
+  border-top: 1px solid var(--nav-color);
+  z-index: 1;
+  top: 0;
+  right: 0;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  justify-content: center;
+  gap: var(--main-gap);
+  list-style: none;
+}
+
+.header__theme-menu-button {
+  text-transform: lowercase;
+  padding: 3px 13px;
+  line-height: 18px;
+  border: 1px solid transparent;
+  background-color: transparent;
+  color: var(--nav-color);
+  cursor: pointer;
+}
+.header__theme-menu-button_active {
+  border: 1px solid var(--nav-color);
+  cursor: default;
+}
+.header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
+  border: 1px solid var(--nav-color);
+}
+.header__theme-menu-button:focus {
+  outline: none;
+}
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--nav-color);
+}
+
+.rec {
+  display: var(--display);
+  gap: var(--main-gap);
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.rec-text {
+  text-transform: uppercase;
+  color: var(--accent-color);
+  line-height: 25px;
+}
+.rec-dot::after {
+  display: inline-block;
+  content: "";
+  width: 9px;
+  height: 9px;
+  border-radius: 100%;
+  background-color: var(--accent-color);
+  box-shadow: 0 0 2px 2px var(--accent-color);
+  margin-inline-end: 9px;
+}
+.header-title {
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  margin-block-start: 273px;
+  margin-block-end: 114px;
+  line-height: 82.5%;
+  color: var(--header-logo-color);
+  text-shadow: 4px 4px 0 var(--title-shadow);
+  margin-inline-start: -20px;
+}
+
+.header-description {
+  color: var(--title-text-color);
+  background-color: var(--accent-color);
+  display: inline-block;
+  inline-size: clamp(355px, 50%, 491px);
+  align-self: flex-end;
+  font-weight: bold;
+}
+@media (width < 1024px) {
+  .header__theme-menu-list {
+    flex-direction: column;
+    align-items: end;
+    padding-block-start: 170px;
+  }
+  .header-title {
+    margin-block-start: 176px;
+    margin-block-end: 162px;
+  }
+}
+
+@media (width < 768px) {
+  .page {
+    padding: var(--main-gap);
+  }
+  .header__theme-menu-list {
+    padding-block-start: 64px;
+  }
+  .header-title {
+    font-size: 7.25rem, 7.0115rem + 1.0178vw, 7.5rem;
+    margin-block-start: 65px;
+    margin-block-end: 54px;
+    margin-inline-start: 0;
+  }
+  .header-description {
+    align-self: center;
+  }
+  .decorated-zone::after {
+    bottom: 20px;
+  }
+}
+
+/* MAIN */
+
+/* SECTION-WHY */
+.link {
+  text-decoration: none;
+  border: 1px solid transparent;
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+.link:focus {
+  outline: none;
+}
+.link:focus-within {
+  outline: 1px solid var(--accent-color);
+}
+.link:hover {
+  border-bottom: 1px solid var(--accent-color);
+}
+
+.section-why {
+  display: grid;
+  grid-template-columns: 315px 1fr;
+  grid-template-rows: auto;
+  gap: 20px;
+  margin-block-end: 60px;
+}
+.section-title {
+  color: var(--accent-color);
+  grid-row: span 2;
+  font-weight: bold;
+}
+.list-item:not(:last-child) {
+  margin-block-end: 20px;
+}
+.list-title {
+  background: var(--accent-color);
+  color: #000028;
+  margin-block-end: 10px;
+  font-size: inherit;
+}
+.decription {
+  font-size: inherit;
+  line-height: inherit;
+}
+
+@media (width < 1024px) {
+  .section-why {
+    grid-template-columns: 236px 1fr;
+  }
+}
+
+@media (width < 768px) {
+  .section-why {
+    grid-template-columns: 1fr;
+    margin-block-end: 50px;
+  }
+  .header.decorated-zone {
+    margin-block-end: 32px;
+  }
+}
+
+/* SECTION-REASONS */
+
+.section-reasons {
+  display: grid;
+  gap: 20px;
+  margin-block-end: 80px;
+}
+.section-reasons .list-articles {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 20px;
+  grid-row: auto;
+}
+.section-reasons .section-title {
+  max-inline-size: 355px;
+}
+
+@media (width < 1024px) {
+  .section-reasons .section-title {
+    max-inline-size: 236px;
+  }
+  .section-reasons .list-articles {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (width < 768px) {
+  .section-reasons .section-title {
+    max-inline-size: 355px;
+  }
+  .section-reasons {
+    margin-block-end: 50px;
+  }
+}
+
+.section-adviсe {
+  display: grid;
+  grid-template-columns: 315px 1fr;
+  grid-template-rows: auto;
+  gap: 20px;
+  margin-block-end: 60px;
+}
+.list-title-advice {
+  margin-block-end: 20px;
+}
+
+@media (width < 1024px) {
+  .section-adviсe {
+    grid-template-columns: 236px 1fr;
+  }
+}
+@media (width < 768px) {
+  .section-adviсe {
+    margin-block-end: 49px;
+    grid-template-columns: 1fr;
+  }
+}
+.section-gallery {
+  margin-block-end: 60px;
+}
+.gallery-list {
+  margin-block-start: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+.gallery-list-item:first-child,
+.gallery-list-item:last-child {
+  grid-column-start: span 2;
+}
+.gallery-list-item:nth-child(2),
+.gallery-list-item:nth-child(3) {
+  grid-row-start: span 2;
+}
+
+.image-gallery {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  block-size: 100%;
+  inline-size: 100%;
+}
+
+@media (width < 768px) {
+  .section-gallery {
+    margin-block-end: 40px;
+  }
+  .gallery-list {
+    grid-template-columns: 1fr;
+    margin-block-start: var(--main-gap);
+    gap: var(--main-gap);
+  }
+  .gallery-list-item:first-child,
+  .gallery-list-item:last-child {
+    grid-column-start: span 1;
+  }
+}
+
+.footer {
+  min-block-size: 100vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-title {
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  line-height: 82.5%;
+  color: var(--header-logo-color);
+  text-shadow: 4px 4px 0 var(--title-shadow);
+}
+
+.footer::after {
+  position: absolute;
+  content: "";
+  width: 25px;
+  height: 25px;
+  border-left: 1px solid var(--nav-color);
+  border-bottom: 1px solid var(--nav-color);
+  z-index: 1;
+  bottom: 20px;
+  left: 0;
+}
+.footer::before {
+  position: absolute;
+  content: "";
+  width: 25px;
+  height: 25px;
+  border-right: 1px solid var(--nav-color);
+  border-top: 1px solid var(--nav-color);
+  z-index: 1;
+  top: 20px;
+  right: 0;
+}
+
+@media (width < 768px) {
+  .header-title {
+    font-size: 7.25rem, 7.0115rem + 1.0178vw, 7.5rem;
+  }
+  .footer::before {
+    top: 10px;
+  }
+  .footer::after {
+    bottom: 10px;
+  }
 }
