--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
   color: var(--main-text-color);
   background-image: url(../images/cover-image-dark.png);
   background-size: cover;
-  background-image: center;
+  background-position: center;
   background-attachment: fixed;
 }
 
