--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  background-color: var(--main-bg-color);
 }
 
 /* HEADER */
