--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 .page {
-  padding: 20px;
   font-family: var(--main-font-family);
   color: var(--main-text-color);
   background-image: url(../images/cover-image-dark.png);
@@ -12,9 +11,10 @@
 /* HEADER */
 
 .header.decorated-zone {
+  padding: 20px 20px 0px;
   min-block-size: 100vh;
   position: relative;
-  margin-block-end: 40px;
+  margin-block-end: 60px;
   display: flex;
   flex-direction: column;
 }
@@ -26,9 +26,8 @@
   border-left: 1px solid var(--nav-color);
   border-bottom: 1px solid var(--nav-color);
   z-index: 1;
-  bottom: 40px;
-
-  left: 0;
+  bottom: 20px;
+  left: 20px;
 }
 .decorated-zone::before {
   position: absolute;
@@ -38,8 +37,8 @@
   border-right: 1px solid var(--nav-color);
   border-top: 1px solid var(--nav-color);
   z-index: 1;
-  top: 0;
-  right: 0;
+  top: 20px;
+  right: 20px;
 }
 
 .header__theme-menu-list {
@@ -76,8 +75,8 @@
   display: var(--display);
   gap: var(--main-gap);
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 20px;
+  right: 20px;
 }
 .rec-text {
   text-transform: uppercase;
@@ -125,8 +124,9 @@
 }
 
 @media (width < 768px) {
-  .page {
+  .header.decorated-zone {
     padding: var(--main-gap);
+    margin-block-end: 40px;
   }
   .header__theme-menu-list {
     padding-block-start: 64px;
@@ -140,8 +140,14 @@
   .header-description {
     align-self: center;
   }
+  .decorated-zone::before,
+  .rec {
+    top: 10px;
+    right: 10px;
+  }
   .decorated-zone::after {
-    bottom: 20px;
+    bottom: 10px;
+    left: 10px;
   }
 }
 
@@ -164,6 +170,7 @@
 }
 
 .section-why {
+  padding: 0 20px;
   display: grid;
   grid-template-columns: 315px 1fr;
   grid-template-rows: auto;
@@ -197,17 +204,16 @@
 
 @media (width < 768px) {
   .section-why {
+    padding: 0px var(--main-gap);
     grid-template-columns: 1fr;
     margin-block-end: 50px;
-  }
-  .header.decorated-zone {
-    margin-block-end: 32px;
   }
 }
 
 /* SECTION-REASONS */
 
 .section-reasons {
+  padding: 0 20px;
   display: grid;
   gap: 20px;
   margin-block-end: 80px;
@@ -237,10 +243,12 @@
   }
   .section-reasons {
     margin-block-end: 50px;
+    padding: 0 var(--main-gap);
   }
 }
 
 .section-adviсe {
+  padding: 0 20px;
   display: grid;
   grid-template-columns: 315px 1fr;
   grid-template-rows: auto;
@@ -260,9 +268,11 @@
   .section-adviсe {
     margin-block-end: 49px;
     grid-template-columns: 1fr;
+    padding: 0px var(--main-gap);
   }
 }
 .section-gallery {
+  padding: 0 20px;
   margin-block-end: 60px;
 }
 .gallery-list {
@@ -291,6 +301,7 @@
 @media (width < 768px) {
   .section-gallery {
     margin-block-end: 40px;
+    padding: 0px var(--main-gap);
   }
   .gallery-list {
     grid-template-columns: 1fr;
@@ -304,6 +315,7 @@
 }
 
 .footer {
+  padding: 0 20px;
   min-block-size: 100vh;
   position: relative;
   display: flex;
@@ -326,7 +338,7 @@
   border-bottom: 1px solid var(--nav-color);
   z-index: 1;
   bottom: 20px;
-  left: 0;
+  left: 20px;
 }
 .footer::before {
   position: absolute;
@@ -337,17 +349,22 @@
   border-top: 1px solid var(--nav-color);
   z-index: 1;
   top: 20px;
-  right: 0;
+  right: 20px;
 }
 
 @media (width < 768px) {
+  .footer {
+    padding: 0px var(--main-gap);
+  }
   .header-title {
     font-size: 7.25rem, 7.0115rem + 1.0178vw, 7.5rem;
   }
   .footer::before {
     top: 10px;
+    right: 10px;
   }
   .footer::after {
     bottom: 10px;
+    left: 10px;
   }
 }
