--- a/styles/dark.css
+++ b/styles/dark.css
@@ -8,6 +8,7 @@
   --header-logo-color: #db00ff;
   --footer-logo-color: #db00ff;
   --main-bg-color: #000028;
+  --section-title-color: #ff0070;
   --title-text-color: #000028;
   --main-text-color: #f1b2ce;
   --accent-color: #ff0070;
