--- a/styles/light.css
+++ b/styles/light.css
@@ -10,10 +10,12 @@
   --nav-color: #353430;
   --nav-color-opacity: rgba(50, 49, 45, 0.4);
   --display: none;
+  --section-title-color: #353430;
 }
 
 @media (prefers-color-scheme: light) {
   :root {
+    --section-title-color: #353430;
     --title-shadow: #ff0070;
     --header-logo-color: #ffc2e6;
     --footer-logo-color: #ffc2e6;
