--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 .page {
+  transition: 1s;
   font-family: var(--main-font-family);
   color: var(--main-text-color);
   background-image: url(../images/cover-image-dark.png);
@@ -8,16 +9,6 @@
   background-color: var(--main-bg-color);
 }
 
-/* HEADER */
-
-.header.decorated-zone {
-  padding: 20px 20px 0px;
-  min-block-size: 100vh;
-  position: relative;
-  margin-block-end: 60px;
-  display: flex;
-  flex-direction: column;
-}
 .decorated-zone::after {
   position: absolute;
   content: "";
@@ -41,6 +32,53 @@
   right: 20px;
 }
 
+.link {
+  text-decoration: none;
+  border: 1px solid transparent;
+  text-shadow: 2px 2px 0 var(--accent-color);
+  transition: 0.5s;
+}
+.link:focus {
+  outline: none;
+}
+.link:focus-within {
+  outline: 1px solid var(--main-text-color);
+  transition: none;
+}
+.link:hover {
+  border-bottom: 1px solid var(--main-text-color);
+}
+/* HEADER */
+
+.header {
+  padding: 20px;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  block-size: 100vh;
+  min-block-size: 668px;
+  margin-bottom: 60px;
+}
+.rec {
+  display: var(--display);
+  gap: var(--main-gap);
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  text-transform: uppercase;
+  color: var(--accent-color);
+  line-height: 25px;
+  align-items: center;
+}
+.rec::after {
+  display: inline-block;
+  content: "";
+  width: 9px;
+  height: 9px;
+  border-radius: 100%;
+  background-color: var(--accent-color);
+  box-shadow: 0 0 2px 2px var(--accent-color);
+  margin-inline-end: 9px;
+}
 .header__theme-menu-list {
   display: flex;
   justify-content: center;
@@ -56,13 +94,14 @@
   background-color: transparent;
   color: var(--nav-color);
   cursor: pointer;
+  transition: 0.5s;
 }
 .header__theme-menu-button_active {
   border: 1px solid var(--nav-color);
-  cursor: default;
+  pointer-events: none;
 }
 .header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
-  border: 1px solid var(--nav-color);
+  border: 1px solid var(--nav-color-opacity);
 }
 .header__theme-menu-button:focus {
   outline: none;
@@ -70,56 +109,28 @@
 .header__theme-menu-button:focus-visible {
   border-bottom: 1px solid var(--nav-color);
 }
-
-.rec {
-  display: var(--display);
-  gap: var(--main-gap);
-  position: absolute;
-  top: 20px;
-  right: 20px;
-}
-.rec-text {
-  text-transform: uppercase;
-  color: var(--accent-color);
-  line-height: 25px;
-}
-.rec-dot::after {
-  display: inline-block;
-  content: "";
-  width: 9px;
-  height: 9px;
-  border-radius: 100%;
-  background-color: var(--accent-color);
-  box-shadow: 0 0 2px 2px var(--accent-color);
-  margin-inline-end: 9px;
-}
 .header-title {
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  margin-block-start: 273px;
-  margin-block-end: 114px;
   line-height: 82.5%;
   color: var(--header-logo-color);
   text-shadow: 4px 4px 0 var(--title-shadow);
   margin-inline-start: -20px;
 }
-
 .header-description {
   color: var(--title-text-color);
   background-color: var(--accent-color);
   display: inline-block;
   inline-size: clamp(355px, 50%, 491px);
-  align-self: flex-end;
+  align-self: center;
+  justify-self: end;
   font-weight: bold;
 }
+
 @media (width < 1024px) {
   .header__theme-menu-list {
     flex-direction: column;
     align-items: end;
     padding-block-start: 170px;
-  }
-  .header-title {
-    margin-block-start: 176px;
-    margin-block-end: 162px;
   }
 }
 
@@ -132,92 +143,83 @@
     padding-block-start: 64px;
   }
   .header-title {
-    font-size: 7.25rem, 7.0115rem + 1.0178vw, 7.5rem;
-    margin-block-start: 65px;
-    margin-block-end: 54px;
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
     margin-inline-start: 0;
-  }
-  .header-description {
-    align-self: center;
   }
   .decorated-zone::before,
   .rec {
-    top: 10px;
-    right: 10px;
+    top: var(--main-gap);
+    right: var(--main-gap);
   }
   .decorated-zone::after {
-    bottom: 10px;
-    left: 10px;
+    bottom: var(--main-gap);
+    left: var(--main-gap);
   }
 }
 
 /* MAIN */
 
-/* SECTION-WHY */
-.link {
-  text-decoration: none;
-  border: 1px solid transparent;
-  text-shadow: 2px 2px 0 var(--accent-color);
-}
-.link:focus {
-  outline: none;
-}
-.link:focus-within {
-  outline: 1px solid var(--accent-color);
-}
-.link:hover {
-  border-bottom: 1px solid var(--accent-color);
-}
-
-.section-why {
-  padding: 0 20px;
+/* SECTION-*/
+.section {
   display: grid;
-  grid-template-columns: 315px 1fr;
-  grid-template-rows: auto;
+  padding: 0 20px;
   gap: 20px;
   margin-block-end: 60px;
 }
+.section-why,
+.section-adviсe {
+  grid-template-columns: 315px 1fr;
+  grid-template-rows: auto;
+}
+.section:nth-of-type(2) {
+  margin-block-end: 80px;
+}
+@media (width < 1024px) {
+  .section-why,
+  .section-adviсe {
+    grid-template-columns: 236px 1fr;
+  }
+}
+@media (width < 768px) {
+  .section,
+  .section:nth-of-type(2) {
+    padding: 0px var(--main-gap);
+    margin-block-end: 50px;
+    grid-template-columns: 1fr;
+  }
+}
 .section-title {
-  color: var(--accent-color);
+  color: var(--section-title-color);
   grid-row: span 2;
   font-weight: bold;
 }
 .list-item:not(:last-child) {
   margin-block-end: 20px;
 }
+.list-article {
+  display: flex;
+  flex-direction: column;
+  gap: var(--main-gap);
+}
 .list-title {
   background: var(--accent-color);
   color: #000028;
-  margin-block-end: 10px;
   font-size: inherit;
 }
 .decription {
   font-size: inherit;
   line-height: inherit;
 }
-
-@media (width < 1024px) {
-  .section-why {
-    grid-template-columns: 236px 1fr;
-  }
-}
+/* SECTION-WHY */
 
 @media (width < 768px) {
   .section-why {
-    padding: 0px var(--main-gap);
     grid-template-columns: 1fr;
-    margin-block-end: 50px;
   }
 }
 
 /* SECTION-REASONS */
 
-.section-reasons {
-  padding: 0 20px;
-  display: grid;
-  gap: 20px;
-  margin-block-end: 80px;
-}
 .section-reasons .list-articles {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -241,42 +243,21 @@
   .section-reasons .section-title {
     max-inline-size: 355px;
   }
-  .section-reasons {
-    margin-block-end: 50px;
-    padding: 0 var(--main-gap);
-  }
 }
 
-.section-adviсe {
-  padding: 0 20px;
-  display: grid;
-  grid-template-columns: 315px 1fr;
-  grid-template-rows: auto;
-  gap: 20px;
-  margin-block-end: 60px;
-}
+/* SECTION-ADVICE */
+
 .list-title-advice {
   margin-block-end: 20px;
 }
 
-@media (width < 1024px) {
-  .section-adviсe {
-    grid-template-columns: 236px 1fr;
-  }
-}
 @media (width < 768px) {
   .section-adviсe {
-    margin-block-end: 49px;
     grid-template-columns: 1fr;
-    padding: 0px var(--main-gap);
   }
 }
-.section-gallery {
-  padding: 0 20px;
-  margin-block-end: 60px;
-}
+
 .gallery-list {
-  margin-block-start: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
@@ -300,12 +281,11 @@
 
 @media (width < 768px) {
   .section-gallery {
-    margin-block-end: 40px;
-    padding: 0px var(--main-gap);
+    margin-bottom: 40px;
+    gap: 10px;
   }
   .gallery-list {
     grid-template-columns: 1fr;
-    margin-block-start: var(--main-gap);
     gap: var(--main-gap);
   }
   .gallery-list-item:first-child,
@@ -316,7 +296,8 @@
 
 .footer {
   padding: 0 20px;
-  min-block-size: 100vh;
+  block-size: 100vh;
+  min-block-size: 668px;
   position: relative;
   display: flex;
   justify-content: center;
@@ -325,46 +306,15 @@
 .footer-title {
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 82.5%;
-  color: var(--header-logo-color);
+  color: var(--footer-logo-color);
   text-shadow: 4px 4px 0 var(--title-shadow);
-}
-
-.footer::after {
-  position: absolute;
-  content: "";
-  width: 25px;
-  height: 25px;
-  border-left: 1px solid var(--nav-color);
-  border-bottom: 1px solid var(--nav-color);
-  z-index: 1;
-  bottom: 20px;
-  left: 20px;
-}
-.footer::before {
-  position: absolute;
-  content: "";
-  width: 25px;
-  height: 25px;
-  border-right: 1px solid var(--nav-color);
-  border-top: 1px solid var(--nav-color);
-  z-index: 1;
-  top: 20px;
-  right: 20px;
 }
 
 @media (width < 768px) {
   .footer {
     padding: 0px var(--main-gap);
   }
-  .header-title {
-    font-size: 7.25rem, 7.0115rem + 1.0178vw, 7.5rem;
-  }
-  .footer::before {
-    top: 10px;
-    right: 10px;
-  }
-  .footer::after {
-    bottom: 10px;
-    left: 10px;
+  .footer-title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   }
 }
