--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@
   bottom: 20px;
   left: 20px;
 }
+
 .decorated-zone::before {
   position: absolute;
   content: "";
@@ -38,16 +39,20 @@
   text-shadow: 2px 2px 0 var(--accent-color);
   transition: 0.5s;
 }
+
 .link:focus {
   outline: none;
 }
+
 .link:focus-within {
   outline: 1px solid var(--main-text-color);
   transition: none;
 }
+
 .link:hover {
   border-bottom: 1px solid var(--main-text-color);
 }
+
 /* HEADER */
 
 .header {
@@ -58,6 +63,7 @@
   min-block-size: 668px;
   margin-bottom: 60px;
 }
+
 .rec {
   display: var(--display);
   gap: var(--main-gap);
@@ -69,6 +75,7 @@
   line-height: 25px;
   align-items: center;
 }
+
 .rec::after {
   display: inline-block;
   content: "";
@@ -79,6 +86,7 @@
   box-shadow: 0 0 2px 2px var(--accent-color);
   margin-inline-end: 9px;
 }
+
 .header__theme-menu-list {
   display: flex;
   justify-content: center;
@@ -96,19 +104,24 @@
   cursor: pointer;
   transition: 0.5s;
 }
+
 .header__theme-menu-button_active {
   border: 1px solid var(--nav-color);
   pointer-events: none;
 }
+
 .header__theme-menu-button:hover:not(.header__theme-menu-button_active) {
   border: 1px solid var(--nav-color-opacity);
 }
+
 .header__theme-menu-button:focus {
   outline: none;
 }
+
 .header__theme-menu-button:focus-visible {
   border-bottom: 1px solid var(--nav-color);
 }
+
 .header-title {
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 82.5%;
@@ -116,6 +129,7 @@
   text-shadow: 4px 4px 0 var(--title-shadow);
   margin-inline-start: -20px;
 }
+
 .header-description {
   color: var(--title-text-color);
   background-color: var(--accent-color);
@@ -160,26 +174,31 @@
 /* MAIN */
 
 /* SECTION-*/
+
 .section {
   display: grid;
   padding: 0 20px;
   gap: 20px;
   margin-block-end: 60px;
 }
+
 .section-why,
 .section-adviсe {
   grid-template-columns: 315px 1fr;
   grid-template-rows: auto;
 }
+
 .section:nth-of-type(2) {
   margin-block-end: 80px;
 }
+
 @media (width < 1024px) {
   .section-why,
   .section-adviсe {
     grid-template-columns: 236px 1fr;
   }
 }
+
 @media (width < 768px) {
   .section,
   .section:nth-of-type(2) {
@@ -188,28 +207,34 @@
     grid-template-columns: 1fr;
   }
 }
+
 .section-title {
   color: var(--section-title-color);
   grid-row: span 2;
   font-weight: bold;
 }
+
 .list-item:not(:last-child) {
   margin-block-end: 20px;
 }
+
 .list-article {
   display: flex;
   flex-direction: column;
   gap: var(--main-gap);
 }
+
 .list-title {
   background: var(--accent-color);
   color: #000028;
   font-size: inherit;
 }
+
 .decription {
   font-size: inherit;
   line-height: inherit;
 }
+
 /* SECTION-WHY */
 
 @media (width < 768px) {
@@ -226,6 +251,7 @@
   column-gap: 20px;
   grid-row: auto;
 }
+
 .section-reasons .section-title {
   max-inline-size: 355px;
 }
@@ -262,10 +288,12 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
 }
+
 .gallery-list-item:first-child,
 .gallery-list-item:last-child {
   grid-column-start: span 2;
 }
+
 .gallery-list-item:nth-child(2),
 .gallery-list-item:nth-child(3) {
   grid-row-start: span 2;
@@ -294,6 +322,8 @@
   }
 }
 
+/* FOOTER*/
+
 .footer {
   padding: 0 20px;
   block-size: 100vh;
@@ -303,6 +333,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .footer-title {
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   line-height: 82.5%;
